/*
 *
 */

2009-02-18 15:42 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/property.ch
    * changed PUBLISHED to use PUBLIC scope
    * PERSISTENT must be explicitly declared on DATA's

2009-02-16 14:55 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  + src/wxbase/baseclasses/wxhmouseevent.prg

2009-02-16 14:50 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * include/property.ch
  * include/wxharbour.ch
  * include/wxhevtdefs.h
  * include/wxh.h
  * src/common/wxhfuncs.prg
  * src/common/wxhutils.prg
  * src/hrbcompat/misc/wxGET.prg
  * src/hrbcompat/misc/wxhfunctions.prg
  * src/raddox/dba.prg
  * src/raddox/tfield.prg
  * src/raddox/tindex.prg
  * src/raddox/ttable.prg
  * src/wxbase/baseclasses/wx_event.cpp
  * src/wxbase/baseclasses/wx_evthandler.cpp
  * src/wxbase/baseclasses/wxhevent.prg
  * src/wxbase/baseclasses/wxhevthandler.prg
  * src/wxbase/baseclasses/wxhwindow.prg
  * src/wxbase/baseclasses/wx_window.cpp

2009-02-08 11:44 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  + include/wxbase/wx_choice.h
  * include/wxharbour.ch
  * src/common/wxhfuncs.prg
  * src/hrbcompat/misc/wxGET.prg
  + src/wxbase/baseclasses/wxchoice.prg
  + src/wxbase/baseclasses/wx_controlwithitems.cpp
  * src/wxbase/baseclasses/wxhcontrolwithitems.prg
  + src/wxbase/controls/wx_choice.cpp
  * src/wxbase/controls/wxhradiobox.prg
    + added wxControlWithItems
    + added wxChoice
    + added wxRadioBox

  * src/raddox/tfield.prg
  * src/raddox/ttable.prg
    * code cleanup

2009-02-07 10:40 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * src/common/wxhfuncs.prg
    * cleanup

2009-02-06 23:14 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  + include/wxbase/wx_checkbox.h
  + include/wxbase/wx_radiobox.h
  * include/wxharbour.ch
  * src/common/wxhfuncs.prg
  + src/wxbase/baseclasses/wxhcontrolwithitems.prg
  + src/wxbase/controls/wx_checkbox.cpp
  + src/wxbase/controls/wxhcheckbox.prg